# cpp-crypto-prototype

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ConsoleApplication1.sln  README.md  crypto.sln  vcpkg.json
ConsoleApplication1/: BlockChain.h  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Crypto.h  Serializer.h  Types.h  blockchain.cpp  crypto_process.cpp  crypto_utils.cpp  crypto_utils.h  main.cpp  process_block.cpp  storage.cpp  utils.cpp  utils.h  verify_block.cpp  verify_block.h
crypto/: Types.h  block_validation.cpp  block_validation.h  block_verification.cpp  block_verification.h  crypto.vcxproj  crypto.vcxproj.filters  crypto_utils.cpp  crypto_utils.h  file_utils.cpp  main.cpp  network.cpp  network.h  storage.cpp  storage.h  utils.cpp  utils.h  utxo_storage.cpp  verify_block.cpp
crypto/include/block_verification/: block_verification.h
crypto/include/crypto_utils/: crypto_utils.h
crypto/src/network/: network.cpp
crypto/src/storage/: storage.cpp
include/: block.h  block_verification.h  block_work.h  blockchainWork.h  bytes_buffer.h  crypto_utils.h  genesis_block.h  node.h  parse_serialise.h  tip.h  tip_block.h  transaction.h  user_commands.h  verify.h  wallet.h
include/network/: handle.h  network.h  network_main.h  network_utils.h  request.h
include/storage/: file_utils.h  peers.h  storage_utils.h  utxo_storage.h
include/storage/block/: block_heights.h  block_indexes.h  block_utils.h  genesis_block.h  tip_block.h
src/: block.cpp  block_verification.cpp  block_work.cpp  blockchain.cpp  crypto_utils.cpp  main.cpp  new_tip_verify.cpp  parse_serialise.cpp  tip.cpp  tip_block.cpp  transaction.cpp  user_commands.cpp  verify.cpp  wallet.cpp
src/network/: Broadcast.cpp  handle.cpp  network.cpp  network_main.cpp  network_utils.cpp  request.cpp
src/network/sync_blockchain/: tip_block.cpp  verify_temp.cpp
src/storage/: blockchainWork.cpp  file_utils.cpp  peers.cpp  storage.cpp  storage_utils.cpp  utxo_storage.cpp
src/storage/block/: block_heights.cpp  block_indexes.cpp  block_utils.cpp  genesis_block.cpp  tip_block.cpp  tip_hash.cpp  tip_height.cpp
src/tip_management/: change_tip.cpp
